--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
     hmlt{
         font-size: 5px;
     }
+    body{
+        margin: 0;
+    }
     .forma1{
         background-color: green;
-        width: 50%;
-        height: 250px;
+        width: 100vw;
+        height: 100vh;
         font-size: 3rem;
         color:white;
         font-weight: bolder;
     }
     .forma2{
         background-color: red;
-        width: 50%;
-        height: 250px;
+        width: 100vw;
+        height: 100vh;
         color:white;
 
     }
